Develop (#5)
* Feature/add pokemon rest api (#1)

* Add feature consume rest api

  - Add MapStruct dependency
  - Add base url api
  - Add get service test
  - Add code to consume pokemon api

* add ports variable

* add actuator, update app port to 8080

* add validation string

* add log4j2.properties config

* add BadRequestException

---------

Co-authored-by: maizdemicorazon <maizdemicorazn@gmail.com>
Co-authored-by: UnderskinGarcia <raul.e.garciacabrera@gmaill.com>

* Add basic ws configuration:

 - improve log4j2.properties
 - add specific logs
 - add pokemon.xsd to ws requests
 - add gradle xjc, wsdl4j and jaxb dependencies
 - xjc generated classes config

* Implement PokemonEndpoint as SOAP adapter with handlers for abilities, base experience, held items, id, name, and location encounters. Configure Spring Web Services with WSDL generation and message dispatcher servlet.

* format log4j2 properties

* clean and format code

* update README.md and format properties

* add postman collection and challenge directory

* read test folder, add integration tests

* Fix tests:

 - Add jackson snake_case strategy
 - Fields correction
 - Config web client max memory
 - Improve javaagent
 - env variable more explicit

* Remove useless param

* Update env variables name

* Caffeine cache:

 - Add caffeine cache dependency
 - Add global excludes
 - Remove java agent
 - Update collection
 - Add Cache config with schedule
 - Add cacheable method
 - Add getSelf proxy
 - Add EnableCaching annotation

* Add persistence log:

 - Add HikariCP Connection Pool
 - Add dev profile connection
 - Disable PostgreSQL for tests
 - Add basic code for persistence

* Add AuditingEntityListener with timezone configured

* Create persistence:

 - objects entities and models
  -add EndpointInterceptor to log requests and responses
  -Add utils to configure and get correct timezone

* Update dev properties profile, comment ddl-auto, organize file

* remove api package

* add interceptor to W